fix: conserta problema no overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 body{
     font-family: 'Roboto', sans-serif;
     background-color: rgb(240,240,240);
+    overflow: hidden;
 }
 header{
     position: fixed;
@@ -18,8 +19,8 @@ header{
 
 .container{
     width: 375px;
-    height: calc(100% - 160px);
-    margin: 80px auto;
+    height: 100%;
+    margin: 0 auto;
     background-color: #F3F3F3;
 }
 
@@ -33,13 +34,15 @@ header{
 }
 
 main{
-    margin-top: 80px;
+    height: 100vh;
+    padding: 80px 0;
 }
 
 .msgs{
     width: 100%;
     height: 100%;
     overflow-y: scroll;
+    overflow-x: hidden;
 }
 .msgs::-webkit-scrollbar{
     width: 5px;
